<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search_id"
        android:icon="@drawable/icon_search"
        android:textSize="8dp"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_love_id"
        android:icon="@drawable/icon_favorites"
        android:textSize="8dp"
        android:title="@string/title_love" />
    <item
        android:id="@+id/navigation_developer_id"
        android:icon="@drawable/icon_developer"
        android:textSize="8dp"
        android:title="@string/title_developer" />

    <item
        android:id="@+id/navigation_news_id"
        android:icon="@drawable/icon_news"
        android:textSize="8dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_chats_id"
        android:icon="@drawable/icon_chat"
        android:textSize="8dp"
        android:title="@string/title_chats" />

</menu>
