<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="top|center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LinearLayout_logo_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:foregroundGravity="top"
            android:gravity="top"
            android:longClickable="false"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewMain_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:foregroundGravity="top"
                android:src="@drawable/logo_kortros" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_Search_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/sf_medium"
                android:text="@string/search_choice"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView_searchCity_ID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="top|center"
                        android:layout_weight="1"
                        android:background="@drawable/ic_svg_town" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium"
                    android:foregroundGravity="top"
                    android:text="@string/search_town"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <View
                    android:id="@+id/view"
                    android:layout_width="2dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#dbdbdb" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingRight="20dp">

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView_searchFilter_ID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="top|center"
                        android:layout_weight="0.5"
                        android:background="@drawable/ic_svg_filter" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium"
                    android:foregroundGravity="top"
                    android:text="@string/search_filter"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>