<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".SearchTownFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@android:color/background_light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/sf_medium"
                    android:text="Кортрос"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/statusMenuID"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true">

                <ImageView
                    android:id="@+id/imageStatusViewID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentRight="false"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="12dp"
                    android:src="@drawable/user_icon" />
            </RelativeLayout>


        </RelativeLayout>

        <ScrollView
            android:id="@+id/ScrollView_ID"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#dddddd"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:src="@drawable/bilder" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/sf_medium"
                        android:text="Надежный застройщик"
                        android:textColor="@android:color/black"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/bilder_text1"
                        android:textColor="@android:color/black"
                        android:textSize="14dp" />

                    <android.support.v4.view.ViewPager
                        android:id="@+id/viewPager_ID"
                        android:layout_width="match_parent"
                        android:layout_height="140dp" />

                    <TextView
                        android:id="@+id/textView26"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/bilder_text2"
                        android:textColor="@android:color/black"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/sf_medium"
                        android:text="Умная квартира"
                        android:textColor="@android:color/black"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/bilder_text3"
                        android:textColor="@android:color/black" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@android:color/white">

                        <VideoView
                            android:id="@+id/videoView_ID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true" />

                        <ImageView
                            android:id="@+id/imageView_video_ID"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:adjustViewBounds="true"
                            android:src="@drawable/start_video"
                            android:textAlignment="center" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView39"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/sf_medium"
                        android:text="Контакты"
                        android:textColor="@android:color/black"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/bilder_text4"
                        android:textColor="@android:color/black" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="400dp">

                        <com.yandex.mapkit.mapview.MapView

                            android:id="@+id/mapview_Bilder_ID"
                            android:layout_width="match_parent"
                            android:layout_height="400dp"
                            android:layout_marginBottom="-50dp"
                            android:layout_marginTop="-50dp"
                            android:background="#007b7070" />


                        <ImageView
                            android:id="@+id/transparent_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@android:color/transparent" />

                    </RelativeLayout>

                </LinearLayout>

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>